package ru.bardinpetr.itmo.islab1.app.entities

enum class TaskStatus {
    NEW, QUEUED, EXECUTING, ENDED
}